fix pointer event for collapsable text areas

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -12,6 +12,10 @@ body {
     background-color: white;
 }
 
+button i.fa-chevron-down {
+    pointer-events: none;
+}
+
 .overlay {
     position: absolute;
     top: 0;
